# AOC

./: .gitmodules  README.md
2023/: CMakeLists.txt
2023/day01/: CMakeLists.txt
2023/day04/: d4p1.cpp  d4p2.cpp
2023/day05/: CMakeLists.txt  d05p2_CPU_KILLER.cpp
2023/day06/: CMakeLists.txt
2023/day1/: compile_commands.json  d1p1  d1p2  d1p2.cpp  day1_part1.cpp  day1_part2.cpp  makefile
2023/day2/: CMakeLists.txt
2023/day3/: CMakeLists.txt  d3p1.cpp  d3p2.cpp
2023/day4/: CMakeLists.txt  d4p2.cpp
